// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Dashboard component kiểm tra giao diện responsive trên màn hình nhỏ 1`] = `
<div>
  <div
    class="sc-Qotzb fmqIqi"
  >
    <div>
      Mocked Sidebar
    </div>
    <div
      class="sc-fYsHOw dTDmtQ"
    >
      <h1>
        Dashboard
      </h1>
      <div
        class="sc-fWnslK gaYCQk"
      >
        <a
          class="sc-dIMoHT jsInvm success"
          href="/invoices/list"
        >
          <div
            class="sc-hZARmv jtAgCN"
          >
            <svg
              fill="currentColor"
              height="1em"
              stroke="currentColor"
              stroke-width="0"
              viewBox="0 0 640 512"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M621.16 54.46C582.37 38.19 543.55 32 504.75 32c-123.17-.01-246.33 62.34-369.5 62.34-30.89 0-61.76-3.92-92.65-13.72-3.47-1.1-6.95-1.62-10.35-1.62C15.04 79 0 92.32 0 110.81v317.26c0 12.63 7.23 24.6 18.84 29.46C57.63 473.81 96.45 480 135.25 480c123.17 0 246.34-62.35 369.51-62.35 30.89 0 61.76 3.92 92.65 13.72 3.47 1.1 6.95 1.62 10.35 1.62 17.21 0 32.25-13.32 32.25-31.81V83.93c-.01-12.64-7.24-24.6-18.85-29.47zM48 132.22c20.12 5.04 41.12 7.57 62.72 8.93C104.84 170.54 79 192.69 48 192.69v-60.47zm0 285v-47.78c34.37 0 62.18 27.27 63.71 61.4-22.53-1.81-43.59-6.31-63.71-13.62zM320 352c-44.19 0-80-42.99-80-96 0-53.02 35.82-96 80-96s80 42.98 80 96c0 53.03-35.83 96-80 96zm272 27.78c-17.52-4.39-35.71-6.85-54.32-8.44 5.87-26.08 27.5-45.88 54.32-49.28v57.72zm0-236.11c-30.89-3.91-54.86-29.7-55.81-61.55 19.54 2.17 38.09 6.23 55.81 12.66v48.89z"
              />
            </svg>
          </div>
          <h3
            class="sc-iQQCXo fkcYzM"
          >
            Tổng doanh thu
          </h3>
          <p
            class="sc-gDpztx ipWByn"
          >
            30.000
             VND
          </p>
          <p
            class="sc-dKKIkQ iTjrVD"
          >
            Xem chi tiết hóa đơn »
          </p>
        </a>
        <a
          class="sc-dIMoHT jsInvm info"
          href="/employees"
        >
          <div
            class="sc-hZARmv jtAgCN"
          >
            <svg
              fill="currentColor"
              height="1em"
              stroke="currentColor"
              stroke-width="0"
              viewBox="0 0 448 512"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M224 256c70.7 0 128-57.3 128-128S294.7 0 224 0 96 57.3 96 128s57.3 128 128 128zm95.8 32.6L272 480l-32-136 32-56h-96l32 56-32 136-47.8-191.4C56.9 292 0 350.3 0 422.4V464c0 26.5 21.5 48 48 48h352c26.5 0 48-21.5 48-48v-41.6c0-72.1-56.9-130.4-128.2-133.8z"
              />
            </svg>
          </div>
          <h3
            class="sc-iQQCXo fkcYzM"
          >
            Số nhân viên
          </h3>
          <p
            class="sc-gDpztx ipWByn"
          >
            2
          </p>
          <p
            class="sc-dKKIkQ iTjrVD"
          >
            Xem nhân viên »
          </p>
        </a>
        <a
          class="sc-dIMoHT jsInvm danger"
          href="/medicines"
        >
          <div
            class="sc-hZARmv jtAgCN"
          >
            <svg
              fill="currentColor"
              height="1em"
              stroke="currentColor"
              stroke-width="0"
              viewBox="0 0 576 512"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M569.517 440.013C587.975 472.007 564.806 512 527.94 512H48.054c-36.937 0-59.999-40.055-41.577-71.987L246.423 23.985c18.467-32.009 64.72-31.951 83.154 0l239.94 416.028zM288 354c-25.405 0-46 20.595-46 46s20.595 46 46 46 46-20.595 46-46-20.595-46-46-46zm-43.673-165.346l7.418 136c.347 6.364 5.609 11.346 11.982 11.346h48.546c6.373 0 11.635-4.982 11.982-11.346l7.418-136c.375-6.874-5.098-12.654-11.982-12.654h-63.383c-6.884 0-12.356 5.78-11.981 12.654z"
              />
            </svg>
          </div>
          <h3
            class="sc-iQQCXo fkcYzM"
          >
            Thuốc đã hết hạn
          </h3>
          <p
            class="sc-gDpztx ipWByn"
          >
            0
          </p>
          <p
            class="sc-dKKIkQ iTjrVD"
          >
            Xử lý ngay »
          </p>
        </a>
        <a
          class="sc-dIMoHT jsInvm warning"
          href="/medicines"
        >
          <div
            class="sc-hZARmv jtAgCN"
          >
            <svg
              fill="currentColor"
              height="1em"
              stroke="currentColor"
              stroke-width="0"
              viewBox="0 0 576 512"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M112 32C50.1 32 0 82.1 0 144v224c0 61.9 50.1 112 112 112s112-50.1 112-112V144c0-61.9-50.1-112-112-112zm48 224H64V144c0-26.5 21.5-48 48-48s48 21.5 48 48v112zm139.7-29.7c-3.5-3.5-9.4-3.1-12.3.8-45.3 62.5-40.4 150.1 15.9 206.4 56.3 56.3 143.9 61.2 206.4 15.9 4-2.9 4.3-8.8.8-12.3L299.7 226.3zm229.8-19c-56.3-56.3-143.9-61.2-206.4-15.9-4 2.9-4.3 8.8-.8 12.3l210.8 210.8c3.5 3.5 9.4 3.1 12.3-.8 45.3-62.6 40.5-150.1-15.9-206.4z"
              />
            </svg>
          </div>
          <h3
            class="sc-iQQCXo fkcYzM"
          >
            Số loại thuốc
          </h3>
          <p
            class="sc-gDpztx ipWByn"
          >
            2
          </p>
          <p
            class="sc-dKKIkQ iTjrVD"
          >
            Xem kho thuốc »
          </p>
        </a>
        <a
          class="sc-dIMoHT jsInvm info"
          href="/invoices/list"
        >
          <div
            class="sc-hZARmv jtAgCN"
          >
            <svg
              fill="currentColor"
              height="1em"
              stroke="currentColor"
              stroke-width="0"
              viewBox="0 0 384 512"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M377 105L279.1 7c-4.5-4.5-10.6-7-17-7H256v128h128v-6.1c0-6.3-2.5-12.4-7-16.9zm-153 31V0H24C10.7 0 0 10.7 0 24v464c0 13.3 10.7 24 24 24h336c13.3 0 24-10.7 24-24V160H248c-13.2 0-24-10.8-24-24zM64 72c0-4.42 3.58-8 8-8h80c4.42 0 8 3.58 8 8v16c0 4.42-3.58 8-8 8H72c-4.42 0-8-3.58-8-8V72zm0 80v-16c0-4.42 3.58-8 8-8h80c4.42 0 8 3.58 8 8v16c0 4.42-3.58 8-8 8H72c-4.42 0-8-3.58-8-8zm144 263.88V440c0 4.42-3.58 8-8 8h-16c-4.42 0-8-3.58-8-8v-24.29c-11.29-.58-22.27-4.52-31.37-11.35-3.9-2.93-4.1-8.77-.57-12.14l11.75-11.21c2.77-2.64 6.89-2.76 10.13-.73 3.87 2.42 8.26 3.72 12.82 3.72h28.11c6.5 0 11.8-5.92 11.8-13.19 0-5.95-3.61-11.19-8.77-12.73l-45-13.5c-18.59-5.58-31.58-23.42-31.58-43.39 0-24.52 19.05-44.44 42.67-45.07V232c0-4.42 3.58-8 8-8h16c4.42 0 8 3.58 8 8v24.29c11.29.58 22.27 4.51 31.37 11.35 3.9 2.93 4.1 8.77.57 12.14l-11.75 11.21c-2.77 2.64-6.89 2.76-10.13.73-3.87-2.43-8.26-3.72-12.82-3.72h-28.11c-6.5 0-11.8 5.92-11.8 13.19 0 5.95 3.61 11.19 8.77 12.73l45 13.5c18.59 5.58 31.58 23.42 31.58 43.39 0 24.53-19.05 44.44-42.67 45.07z"
              />
            </svg>
          </div>
          <h3
            class="sc-iQQCXo fkcYzM"
          >
            Số hóa đơn
          </h3>
          <p
            class="sc-gDpztx ipWByn"
          >
            2
          </p>
          <p
            class="sc-dKKIkQ iTjrVD"
          >
            Xem danh sách hóa đơn »
          </p>
        </a>
        <div
          class="sc-dIMoHT jsInvm success"
        >
          <div
            class="sc-hZARmv jtAgCN"
          >
            <svg
              fill="currentColor"
              height="1em"
              stroke="currentColor"
              stroke-width="0"
              viewBox="0 0 512 512"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M496 384H64V80c0-8.84-7.16-16-16-16H16C7.16 64 0 71.16 0 80v336c0 17.67 14.33 32 32 32h464c8.84 0 16-7.16 16-16v-32c0-8.84-7.16-16-16-16zM464 96H345.94c-21.38 0-32.09 25.85-16.97 40.97l32.4 32.4L288 242.75l-73.37-73.37c-12.5-12.5-32.76-12.5-45.25 0l-68.69 68.69c-6.25 6.25-6.25 16.38 0 22.63l22.62 22.62c6.25 6.25 16.38 6.25 22.63 0L192 237.25l73.37 73.37c12.5 12.5 32.76 12.5 45.25 0l96-96 32.4 32.4c15.12 15.12 40.97 4.41 40.97-16.97V112c.01-8.84-7.15-16-15.99-16z"
              />
            </svg>
          </div>
          <h3
            class="sc-iQQCXo fkcYzM"
          >
            Doanh thu đang lọc
          </h3>
          <p
            class="sc-gDpztx ipWByn"
          >
            30.000
             VND
          </p>
          <p
            class="sc-dKKIkQ iTjrVD"
          >
            2
             hóa đơn
          </p>
        </div>
      </div>
      <div
        class="sc-kpOvIu felgNH"
      >
        <h2>
          Báo cáo doanh thu
        </h2>
        <strong
          class="sc-icnseD hFcLGl"
        >
          30.000
           đồng
        </strong>
        <div
          class="sc-jMsorb lbOXdJ"
        >
          <span>
            Toàn bộ doanh thu
          </span>
          <span>
            2
             hóa đơn
          </span>
        </div>
        <div
          class="sc-cXawGu eSrQHv"
        >
          <label
            class="sc-jJAtPt hFLYpr"
          >
            Ngày cụ thể
            <input
              type="date"
              value=""
            />
          </label>
          <label
            class="sc-jJAtPt hFLYpr"
          >
            Tháng và năm
            <input
              type="month"
              value=""
            />
          </label>
          <label
            class="sc-jJAtPt hFLYpr"
          >
            Từ ngày
            <input
              type="date"
              value=""
            />
          </label>
          <label
            class="sc-jJAtPt hFLYpr"
          >
            Đến ngày
            <input
              type="date"
              value=""
            />
          </label>
          <button
            type="button"
          >
            Bỏ lọc
          </button>
        </div>
      </div>
      <div
        class="sc-cUiCeM cWjTrm"
      >
        <h2>
          Chi phí nhập thuốc theo thời gian
        </h2>
        <div>
          <div
            data-testid="mocked-linechart"
          >
            Mocked LineChart
          </div>
        </div>
      </div>
      <div
        class="sc-cUiCeM cWjTrm"
      >
        <div
          class="sc-jScdur eRDRCY"
        >
          <div>
            <h2>
              Hóa đơn gần đây
            </h2>
            <div
              class="sc-cZSric loIZoO"
            >
              <table
                class="sc-lixPIL hwhBsg"
              >
                <thead>
                  <tr>
                    <th
                      class="sc-etfXYe hTOjOP"
                    >
                      Mã hóa đơn
                    </th>
                    <th
                      class="sc-etfXYe hTOjOP"
                    >
                      Thời gian
                    </th>
                    <th
                      class="sc-etfXYe hTOjOP"
                    >
                      Khách hàng
                    </th>
                    <th
                      class="sc-etfXYe hTOjOP"
                    >
                      Tổng tiền
                    </th>
                  </tr>
                </thead>
                <tbody>
                  <tr>
                    <td
                      class="sc-dFaThA kQPsxs"
                    >
                      1
                    </td>
                    <td
                      class="sc-dFaThA kQPsxs"
                    >
                      04/05/2025 17:00:00
                    </td>
                    <td
                      class="sc-dFaThA kQPsxs"
                    >
                      Nguyen Van A
                    </td>
                    <td
                      class="sc-dFaThA kQPsxs"
                    >
                      20.000
                       VND
                    </td>
                  </tr>
                  <tr>
                    <td
                      class="sc-dFaThA kQPsxs"
                    >
                      2
                    </td>
                    <td
                      class="sc-dFaThA kQPsxs"
                    >
                      03/05/2025 21:00:00
                    </td>
                    <td
                      class="sc-dFaThA kQPsxs"
                    >
                      Tran Thi B
                    </td>
                    <td
                      class="sc-dFaThA kQPsxs"
                    >
                      10.000
                       VND
                    </td>
                  </tr>
                </tbody>
              </table>
            </div>
          </div>
          <div>
            <h2>
              Thuốc gần hết hạn
            </h2>
            <div
              class="sc-cZSric loIZoO"
            >
              <table
                class="sc-lixPIL hwhBsg"
              >
                <thead>
                  <tr>
                    <th
                      class="sc-etfXYe hTOjOP"
                    >
                      Mã thuốc
                    </th>
                    <th
                      class="sc-etfXYe hTOjOP"
                    >
                      Tên thuốc
                    </th>
                    <th
                      class="sc-etfXYe hTOjOP"
                    >
                      Hạn sử dụng
                    </th>
                    <th
                      class="sc-etfXYe hTOjOP"
                    >
                      Số lượng
                    </th>
                  </tr>
                </thead>
                <tbody>
                  <tr>
                    <td
                      class="sc-dFaThA kQPsxs"
                    >
                      MED001
                    </td>
                    <td
                      class="sc-dFaThA kQPsxs"
                    >
                      Paracetamol
                    </td>
                    <td
                      class="sc-dFaThA kQPsxs"
                    >
                      01/06/2099
                    </td>
                    <td
                      class="sc-dFaThA kQPsxs"
                    >
                      50
                    </td>
                  </tr>
                  <tr>
                    <td
                      class="sc-dFaThA kQPsxs"
                    >
                      MED002
                    </td>
                    <td
                      class="sc-dFaThA kQPsxs"
                    >
                      Ibuprofen
                    </td>
                    <td
                      class="sc-dFaThA kQPsxs"
                    >
                      02/06/2099
                    </td>
                    <td
                      class="sc-dFaThA kQPsxs"
                    >
                      30
                    </td>
                  </tr>
                </tbody>
              </table>
            </div>
          </div>
        </div>
      </div>
      <div
        class="sc-dcKlJK bHSbSi"
      >
        <div
          class="sc-cUiCeM cWjTrm"
        >
          <h2>
            Top thuốc bán chạy nhất
          </h2>
          <div>
            <div
              data-testid="mocked-barchart"
            >
              Mocked BarChart
            </div>
          </div>
        </div>
        <div
          class="sc-cUiCeM cWjTrm"
        >
          <h2>
            Cơ cấu trạng thái hóa đơn
          </h2>
          <div>
            <div
              data-testid="mocked-piechart"
            >
              Mocked PieChart
            </div>
          </div>
        </div>
      </div>
      <div
        class="sc-dcKlJK bHSbSi"
      >
        <div
          class="sc-cUiCeM fCqpvP"
        >
          <h2>
            Số lượng tồn, nhập, bán
          </h2>
          <div
            class="sc-jPkiSJ iywcIt"
          >
            <div>
              <div
                data-testid="mocked-barchart"
              >
                Mocked BarChart
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Dashboard component snapshot của giao diện Dashboard 1`] = `
<div>
  <div
    class="sc-Qotzb fmqIqi"
  >
    <div>
      Mocked Sidebar
    </div>
    <div
      class="sc-fYsHOw dTDmtQ"
    >
      <h1>
        Dashboard
      </h1>
      <div
        class="sc-fWnslK gaYCQk"
      >
        <a
          class="sc-dIMoHT jsInvm success"
          href="/invoices/list"
        >
          <div
            class="sc-hZARmv jtAgCN"
          >
            <svg
              fill="currentColor"
              height="1em"
              stroke="currentColor"
              stroke-width="0"
              viewBox="0 0 640 512"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M621.16 54.46C582.37 38.19 543.55 32 504.75 32c-123.17-.01-246.33 62.34-369.5 62.34-30.89 0-61.76-3.92-92.65-13.72-3.47-1.1-6.95-1.62-10.35-1.62C15.04 79 0 92.32 0 110.81v317.26c0 12.63 7.23 24.6 18.84 29.46C57.63 473.81 96.45 480 135.25 480c123.17 0 246.34-62.35 369.51-62.35 30.89 0 61.76 3.92 92.65 13.72 3.47 1.1 6.95 1.62 10.35 1.62 17.21 0 32.25-13.32 32.25-31.81V83.93c-.01-12.64-7.24-24.6-18.85-29.47zM48 132.22c20.12 5.04 41.12 7.57 62.72 8.93C104.84 170.54 79 192.69 48 192.69v-60.47zm0 285v-47.78c34.37 0 62.18 27.27 63.71 61.4-22.53-1.81-43.59-6.31-63.71-13.62zM320 352c-44.19 0-80-42.99-80-96 0-53.02 35.82-96 80-96s80 42.98 80 96c0 53.03-35.83 96-80 96zm272 27.78c-17.52-4.39-35.71-6.85-54.32-8.44 5.87-26.08 27.5-45.88 54.32-49.28v57.72zm0-236.11c-30.89-3.91-54.86-29.7-55.81-61.55 19.54 2.17 38.09 6.23 55.81 12.66v48.89z"
              />
            </svg>
          </div>
          <h3
            class="sc-iQQCXo fkcYzM"
          >
            Tổng doanh thu
          </h3>
          <p
            class="sc-gDpztx ipWByn"
          >
            0
             VND
          </p>
          <p
            class="sc-dKKIkQ iTjrVD"
          >
            Xem chi tiết hóa đơn »
          </p>
        </a>
        <a
          class="sc-dIMoHT jsInvm info"
          href="/employees"
        >
          <div
            class="sc-hZARmv jtAgCN"
          >
            <svg
              fill="currentColor"
              height="1em"
              stroke="currentColor"
              stroke-width="0"
              viewBox="0 0 448 512"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M224 256c70.7 0 128-57.3 128-128S294.7 0 224 0 96 57.3 96 128s57.3 128 128 128zm95.8 32.6L272 480l-32-136 32-56h-96l32 56-32 136-47.8-191.4C56.9 292 0 350.3 0 422.4V464c0 26.5 21.5 48 48 48h352c26.5 0 48-21.5 48-48v-41.6c0-72.1-56.9-130.4-128.2-133.8z"
              />
            </svg>
          </div>
          <h3
            class="sc-iQQCXo fkcYzM"
          >
            Số nhân viên
          </h3>
          <p
            class="sc-gDpztx ipWByn"
          >
            0
          </p>
          <p
            class="sc-dKKIkQ iTjrVD"
          >
            Xem nhân viên »
          </p>
        </a>
        <a
          class="sc-dIMoHT jsInvm danger"
          href="/medicines"
        >
          <div
            class="sc-hZARmv jtAgCN"
          >
            <svg
              fill="currentColor"
              height="1em"
              stroke="currentColor"
              stroke-width="0"
              viewBox="0 0 576 512"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M569.517 440.013C587.975 472.007 564.806 512 527.94 512H48.054c-36.937 0-59.999-40.055-41.577-71.987L246.423 23.985c18.467-32.009 64.72-31.951 83.154 0l239.94 416.028zM288 354c-25.405 0-46 20.595-46 46s20.595 46 46 46 46-20.595 46-46-20.595-46-46-46zm-43.673-165.346l7.418 136c.347 6.364 5.609 11.346 11.982 11.346h48.546c6.373 0 11.635-4.982 11.982-11.346l7.418-136c.375-6.874-5.098-12.654-11.982-12.654h-63.383c-6.884 0-12.356 5.78-11.981 12.654z"
              />
            </svg>
          </div>
          <h3
            class="sc-iQQCXo fkcYzM"
          >
            Thuốc đã hết hạn
          </h3>
          <p
            class="sc-gDpztx ipWByn"
          >
            0
          </p>
          <p
            class="sc-dKKIkQ iTjrVD"
          >
            Xử lý ngay »
          </p>
        </a>
        <a
          class="sc-dIMoHT jsInvm warning"
          href="/medicines"
        >
          <div
            class="sc-hZARmv jtAgCN"
          >
            <svg
              fill="currentColor"
              height="1em"
              stroke="currentColor"
              stroke-width="0"
              viewBox="0 0 576 512"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M112 32C50.1 32 0 82.1 0 144v224c0 61.9 50.1 112 112 112s112-50.1 112-112V144c0-61.9-50.1-112-112-112zm48 224H64V144c0-26.5 21.5-48 48-48s48 21.5 48 48v112zm139.7-29.7c-3.5-3.5-9.4-3.1-12.3.8-45.3 62.5-40.4 150.1 15.9 206.4 56.3 56.3 143.9 61.2 206.4 15.9 4-2.9 4.3-8.8.8-12.3L299.7 226.3zm229.8-19c-56.3-56.3-143.9-61.2-206.4-15.9-4 2.9-4.3 8.8-.8 12.3l210.8 210.8c3.5 3.5 9.4 3.1 12.3-.8 45.3-62.6 40.5-150.1-15.9-206.4z"
              />
            </svg>
          </div>
          <h3
            class="sc-iQQCXo fkcYzM"
          >
            Số loại thuốc
          </h3>
          <p
            class="sc-gDpztx ipWByn"
          >
            0
          </p>
          <p
            class="sc-dKKIkQ iTjrVD"
          >
            Xem kho thuốc »
          </p>
        </a>
        <a
          class="sc-dIMoHT jsInvm info"
          href="/invoices/list"
        >
          <div
            class="sc-hZARmv jtAgCN"
          >
            <svg
              fill="currentColor"
              height="1em"
              stroke="currentColor"
              stroke-width="0"
              viewBox="0 0 384 512"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M377 105L279.1 7c-4.5-4.5-10.6-7-17-7H256v128h128v-6.1c0-6.3-2.5-12.4-7-16.9zm-153 31V0H24C10.7 0 0 10.7 0 24v464c0 13.3 10.7 24 24 24h336c13.3 0 24-10.7 24-24V160H248c-13.2 0-24-10.8-24-24zM64 72c0-4.42 3.58-8 8-8h80c4.42 0 8 3.58 8 8v16c0 4.42-3.58 8-8 8H72c-4.42 0-8-3.58-8-8V72zm0 80v-16c0-4.42 3.58-8 8-8h80c4.42 0 8 3.58 8 8v16c0 4.42-3.58 8-8 8H72c-4.42 0-8-3.58-8-8zm144 263.88V440c0 4.42-3.58 8-8 8h-16c-4.42 0-8-3.58-8-8v-24.29c-11.29-.58-22.27-4.52-31.37-11.35-3.9-2.93-4.1-8.77-.57-12.14l11.75-11.21c2.77-2.64 6.89-2.76 10.13-.73 3.87 2.42 8.26 3.72 12.82 3.72h28.11c6.5 0 11.8-5.92 11.8-13.19 0-5.95-3.61-11.19-8.77-12.73l-45-13.5c-18.59-5.58-31.58-23.42-31.58-43.39 0-24.52 19.05-44.44 42.67-45.07V232c0-4.42 3.58-8 8-8h16c4.42 0 8 3.58 8 8v24.29c11.29.58 22.27 4.51 31.37 11.35 3.9 2.93 4.1 8.77.57 12.14l-11.75 11.21c-2.77 2.64-6.89 2.76-10.13.73-3.87-2.43-8.26-3.72-12.82-3.72h-28.11c-6.5 0-11.8 5.92-11.8 13.19 0 5.95 3.61 11.19 8.77 12.73l45 13.5c18.59 5.58 31.58 23.42 31.58 43.39 0 24.53-19.05 44.44-42.67 45.07z"
              />
            </svg>
          </div>
          <h3
            class="sc-iQQCXo fkcYzM"
          >
            Số hóa đơn
          </h3>
          <p
            class="sc-gDpztx ipWByn"
          >
            0
          </p>
          <p
            class="sc-dKKIkQ iTjrVD"
          >
            Xem danh sách hóa đơn »
          </p>
        </a>
        <div
          class="sc-dIMoHT jsInvm success"
        >
          <div
            class="sc-hZARmv jtAgCN"
          >
            <svg
              fill="currentColor"
              height="1em"
              stroke="currentColor"
              stroke-width="0"
              viewBox="0 0 512 512"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M496 384H64V80c0-8.84-7.16-16-16-16H16C7.16 64 0 71.16 0 80v336c0 17.67 14.33 32 32 32h464c8.84 0 16-7.16 16-16v-32c0-8.84-7.16-16-16-16zM464 96H345.94c-21.38 0-32.09 25.85-16.97 40.97l32.4 32.4L288 242.75l-73.37-73.37c-12.5-12.5-32.76-12.5-45.25 0l-68.69 68.69c-6.25 6.25-6.25 16.38 0 22.63l22.62 22.62c6.25 6.25 16.38 6.25 22.63 0L192 237.25l73.37 73.37c12.5 12.5 32.76 12.5 45.25 0l96-96 32.4 32.4c15.12 15.12 40.97 4.41 40.97-16.97V112c.01-8.84-7.15-16-15.99-16z"
              />
            </svg>
          </div>
          <h3
            class="sc-iQQCXo fkcYzM"
          >
            Doanh thu đang lọc
          </h3>
          <p
            class="sc-gDpztx ipWByn"
          >
            0
             VND
          </p>
          <p
            class="sc-dKKIkQ iTjrVD"
          >
            0
             hóa đơn
          </p>
        </div>
      </div>
      <div
        class="sc-kpOvIu felgNH"
      >
        <h2>
          Báo cáo doanh thu
        </h2>
        <strong
          class="sc-icnseD hFcLGl"
        >
          0
           đồng
        </strong>
        <div
          class="sc-jMsorb lbOXdJ"
        >
          <span>
            Toàn bộ doanh thu
          </span>
          <span>
            0
             hóa đơn
          </span>
        </div>
        <div
          class="sc-cXawGu eSrQHv"
        >
          <label
            class="sc-jJAtPt hFLYpr"
          >
            Ngày cụ thể
            <input
              type="date"
              value=""
            />
          </label>
          <label
            class="sc-jJAtPt hFLYpr"
          >
            Tháng và năm
            <input
              type="month"
              value=""
            />
          </label>
          <label
            class="sc-jJAtPt hFLYpr"
          >
            Từ ngày
            <input
              type="date"
              value=""
            />
          </label>
          <label
            class="sc-jJAtPt hFLYpr"
          >
            Đến ngày
            <input
              type="date"
              value=""
            />
          </label>
          <button
            type="button"
          >
            Bỏ lọc
          </button>
        </div>
      </div>
      <div
        class="sc-cUiCeM cWjTrm"
      >
        <h2>
          Chi phí nhập thuốc theo thời gian
        </h2>
        <div>
          <div
            data-testid="mocked-linechart"
          >
            Mocked LineChart
          </div>
        </div>
      </div>
      <div
        class="sc-cUiCeM cWjTrm"
      >
        <div
          class="sc-jScdur eRDRCY"
        >
          <div>
            <h2>
              Hóa đơn gần đây
            </h2>
            <div
              class="sc-cZSric loIZoO"
            >
              <table
                class="sc-lixPIL hwhBsg"
              >
                <thead>
                  <tr>
                    <th
                      class="sc-etfXYe hTOjOP"
                    >
                      Mã hóa đơn
                    </th>
                    <th
                      class="sc-etfXYe hTOjOP"
                    >
                      Thời gian
                    </th>
                    <th
                      class="sc-etfXYe hTOjOP"
                    >
                      Khách hàng
                    </th>
                    <th
                      class="sc-etfXYe hTOjOP"
                    >
                      Tổng tiền
                    </th>
                  </tr>
                </thead>
                <tbody>
                  <tr>
                    <td
                      class="sc-fjUQFl bMmbjz"
                      colspan="4"
                    >
                      Chưa có hóa đơn gần đây.
                    </td>
                  </tr>
                </tbody>
              </table>
            </div>
          </div>
          <div>
            <h2>
              Thuốc gần hết hạn
            </h2>
            <div
              class="sc-cZSric loIZoO"
            >
              <table
                class="sc-lixPIL hwhBsg"
              >
                <thead>
                  <tr>
                    <th
                      class="sc-etfXYe hTOjOP"
                    >
                      Mã thuốc
                    </th>
                    <th
                      class="sc-etfXYe hTOjOP"
                    >
                      Tên thuốc
                    </th>
                    <th
                      class="sc-etfXYe hTOjOP"
                    >
                      Hạn sử dụng
                    </th>
                    <th
                      class="sc-etfXYe hTOjOP"
                    >
                      Số lượng
                    </th>
                  </tr>
                </thead>
                <tbody>
                  <tr>
                    <td
                      class="sc-fjUQFl bMmbjz"
                      colspan="4"
                    >
                      Chưa có thuốc gần hết hạn.
                    </td>
                  </tr>
                </tbody>
              </table>
            </div>
          </div>
        </div>
      </div>
      <div
        class="sc-dcKlJK bHSbSi"
      >
        <div
          class="sc-cUiCeM cWjTrm"
        >
          <h2>
            Top thuốc bán chạy nhất
          </h2>
          <p
            class="sc-fjUQFl bMmbjz"
          >
            Chưa có dữ liệu thuốc đã bán.
          </p>
        </div>
        <div
          class="sc-cUiCeM cWjTrm"
        >
          <h2>
            Cơ cấu trạng thái hóa đơn
          </h2>
          <p
            class="sc-fjUQFl bMmbjz"
          >
            Chưa có dữ liệu trạng thái hóa đơn.
          </p>
        </div>
      </div>
      <div
        class="sc-dcKlJK bHSbSi"
      >
        <div
          class="sc-cUiCeM fCqpvP"
        >
          <h2>
            Số lượng tồn, nhập, bán
          </h2>
          <div
            class="sc-jPkiSJ iywcIt"
          >
            <div>
              <div
                data-testid="mocked-barchart"
              >
                Mocked BarChart
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
